--- a/css/style.css
+++ b/css/style.css
@@ -53,8 +53,8 @@ h3 {
 .footer {
   padding: 2em 0;
   font-size: 0.6em;
-  background-color: #1f2833;
-  text-align: center;
+  background-color: #000000;
+  text-align: left;
   width: 100%; }
   .footer * {
     color: #f8f8f8; }
@@ -74,9 +74,8 @@ h3 {
 .hire {
   border-radius: 70px;
   padding: 10px 15px;
-  width: 6rem;
+  width: 4.8rem;
   text-align: center;
-  text-transform: uppercase;
   position: fixed;
   top: 0;
   right: 0;
@@ -86,10 +85,11 @@ h3 {
   background: #EE2E31;
   transition: 0.5s ease;
   font-family: "Roboto Slab", serif;
-  z-index: 99999; }
+  z-index: 99999;
+  opacity: 0.8; }
 
 .hire:hover {
-  opacity: 0.5; }
+  opacity: 1; }
 
 h2 {
   font-family: "Roboto Slab", serif;
@@ -189,6 +189,25 @@ h2:after {
   width: 100%;
   left: 0;
   background: #EE2E31; }
+
+.chatbot-icon {
+  background-color: #EE2E31;
+  height: 60px;
+  width: 60px;
+  border-radius: 100%;
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  background-image: url(../images/chat-ii.svg);
+  background-position: center center;
+  background-size: 35px;
+  background-repeat: no-repeat; }
+
+.chatbot-screen {
+  min-height: 100%;
+  background-color: #EE2E31;
+  color: #0b0c10;
+  position: absolute; }
 
 /*******************
 *    Scrollbar
@@ -454,6 +473,9 @@ h2:after {
     padding: 1em 0 0 0; }
 
   .avatar {
-    width: 50%; } }
+    width: 50%; }
+
+  .footer, .right-footer {
+    text-align: center; } }
 
 /*# sourceMappingURL=style.css.map */
