--- a/css/style.scss
+++ b/css/style.scss
@@ -70,8 +70,8 @@ h3 {
 .footer {
     padding: 2em 0;
     font-size: 0.6em;
-    background-color: $grey;
-    text-align: center;
+    background-color: #000000;
+    text-align: left;
     width: 100%;
     * {
         color: $white;
@@ -96,9 +96,8 @@ h3 {
 .hire {
     border-radius: 70px;
     padding: 10px 15px;
-    width: 6rem;
+    width: 4.8rem;
     text-align: center;
-    text-transform: uppercase;
     position: fixed;
     top: 0;
     right: 0;
@@ -109,10 +108,11 @@ h3 {
     transition: 0.5s ease;
     font-family: $robotoS;
     z-index: 99999;
+    opacity: 0.8;
 }
 
 .hire:hover {
-    opacity: 0.5;
+    opacity: 1;
 }
 
 h2 {
@@ -237,6 +237,28 @@ h2:after {
     width: 100%;
     left: 0;
     background: $sky;
+}
+
+
+.chatbot-icon {
+    background-color: $sky;
+    height: 60px;
+    width: 60px;
+    border-radius: 100%;
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    background-image: url(../images/chat-ii.svg);
+    background-position: center center;
+    background-size: 35px;
+    background-repeat: no-repeat;
+}
+
+.chatbot-screen {
+    min-height: 100%;
+    background-color: $sky;
+    color: $black;
+    position: absolute;
 }
 
 
@@ -605,5 +627,8 @@ $cubic-bezier-out: cubic-bezier(1,
     }
     .avatar {
         width: 50%;
+    }
+    .footer, .right-footer {
+        text-align: center;
     }
 }
