--- a/css/style.scss
+++ b/css/style.scss
@@ -252,13 +252,34 @@ h2:after {
     background-position: center center;
     background-size: 35px;
     background-repeat: no-repeat;
+    z-index: 1000000;
 }
 
 .chatbot-screen {
+    z-index: 100000000000000000000000;
     min-height: 100%;
+    min-width: 100%;
     background-color: $sky;
     color: $black;
-    position: absolute;
+    position: fixed;
+    display: none;
+
+    * {
+        color: $black;
+    }
+
+    h1 {
+        text-transform: none;
+        margin: 0;
+        padding: 0;
+    }
+
+    .close {
+        cursor: pointer;
+        font-size: 3em;
+        padding-bottom: 0;
+        margin-bottom: 0;
+    }
 }
 
 
@@ -439,8 +460,8 @@ h2:after {
 
 $menu-icon-line-height: 3px;
 $menu-icon-line-space: 10px;
-$menu-icon-line-offsetY: $menu-icon-line-height+$menu-icon-line-space;
-$menu-icon-height: (3*$menu-icon-line-height)+(2*$menu-icon-line-space);
+$menu-icon-line-offsetY: $menu-icon-line-height + $menu-icon-line-space;
+$menu-icon-height: (3*$menu-icon-line-height) + (2*$menu-icon-line-space);
 $cubic-bezier-in: cubic-bezier(0.30,
 1,
 0.70,
@@ -628,7 +649,12 @@ $cubic-bezier-out: cubic-bezier(1,
     .avatar {
         width: 50%;
     }
-    .footer, .right-footer {
+    .footer,
+    .right-footer {
+        text-align: center;
+    }
+
+    .close {
         text-align: center;
     }
 }
