--- a/css/style.scss
+++ b/css/style.scss
@@ -15,21 +15,23 @@
 *
 *   Fonts:
 *
-*   font-family: 'Fauna One', serif;
-*   font-family: 'Roboto Slab', serif;
+*   font-family: 'Playfair Display', serif;
+*   font-family: 'Alice', serif;
 
 ****************************************
 */
 
-$black: #272524; //#0b0c10
-$white: #f8f8f8;
-$sky: #bc814f; // #66fcf1   #EE2E31  #f34a4a
-$dsky: #94653c; // #77BBB8
-$grey: #1f2833;
-$lgrey: #E4E4E4;
-$fauna: 'Fauna One',
+@import url('https://fonts.googleapis.com/css?family=Alice|Playfair+Display:700&display=swap');
+
+$black: #e8e8e8; //#0b0c10
+$white:#2b434f;
+$sky: #141E30; // #66fcf1   #EE2E31  #f34a4a
+$dsky: #141E30; // #77BBB8
+$grey: #2b434f;
+$lgrey: #2b434f;
+$fauna: 'Alice',
 serif;
-$robotoS: 'Roboto Slab',
+$robotoS: 'Playfair Display',
 serif;
 
 * {
@@ -57,6 +59,15 @@ h1 {
     font-family: $robotoS;
     font-size: 4rem;
     font-weight: 100;
+    background: #141E30;
+    background: -webkit-linear-gradient(to right, #243B55, #141E30);
+    background: linear-gradient(to right, #243B55, #141E30);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+    text-fill-color: transparent;
+    background-size: cover;
+    display: inline-block;
 }
 
 h3 {
@@ -67,11 +78,12 @@ h3 {
 }
 
 .footer {
-    padding: 0em 0;
+    padding: 0;
     font-size: 0.7em;
-    background-color: #1d1b1b;
+    background-color: #fff;
     text-align: left;
     width: 100%;
+    box-shadow: inset 0 0.25em .5rem rgba(0,0,0,.20);
 
     * {
         color: $white;
@@ -150,12 +162,12 @@ h2:after {
     position: fixed;
     top: 0px;
     width: 100%;
-    background-color: $black;
+    background-color: #fff;
     color: $white;
-    border-bottom: 2px solid $sky;
     z-index: 9999;
     display: none;
     padding: 1em;
+    box-shadow: 0 .125rem .25rem rgba(0,0,0,.075);
 
     .mobile-nav {
         display: none;
@@ -479,13 +491,13 @@ $menu-icon-line-space: 10px;
 $menu-icon-line-offsetY: $menu-icon-line-height+$menu-icon-line-space;
 $menu-icon-height: (3*$menu-icon-line-height)+(2*$menu-icon-line-space);
 $cubic-bezier-in: cubic-bezier(0.30,
-1,
-0.70,
-1);
+    1,
+    0.70,
+    1);
 $cubic-bezier-out: cubic-bezier(1,
-0.70,
-1,
-0.30);
+    0.70,
+    1,
+    0.30);
 
 .menu-icon {
     width: 35px;
